// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<APIKey /> should render when [state.changed=true] 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={[Function]}
>
  <Key__KeyHeader>
    <strong>
      tester
    </strong>
    <Key__Permissions>
      1
       perm
      <Key__PermissionsSuffix>
        ission
      </Key__PermissionsSuffix>
    </Key__Permissions>
    <Key__Create>
      Created 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
    </Key__Create>
    <Key__FormatDate>
      18-12-14
    </Key__FormatDate>
  </Key__KeyHeader>
</Box__SpacedBox>
`;

exports[`<APIKey /> should render when collapsed 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={[Function]}
>
  <Key__KeyHeader>
    <strong>
      tester
    </strong>
    <Key__Permissions>
      1
       perm
      <Key__PermissionsSuffix>
        ission
      </Key__PermissionsSuffix>
    </Key__Permissions>
    <Key__Create>
      Created 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
    </Key__Create>
    <Key__FormatDate>
      18-12-14
    </Key__FormatDate>
  </Key__KeyHeader>
</Box__SpacedBox>
`;

exports[`<APIKey /> should render when expanded 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={null}
>
  <Key__KeyHeader>
    <strong>
      tester
    </strong>
    <Key__Permissions>
      1
       perm
      <Key__PermissionsSuffix>
        ission
      </Key__PermissionsSuffix>
    </Key__Permissions>
    <Key__Create>
      Created 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
    </Key__Create>
    <Key__FormatDate>
      18-12-14
    </Key__FormatDate>
    <button
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span>
        ×
      </span>
    </button>
  </Key__KeyHeader>
  <div>
    <Key__KeyAPIPermissions
      keyPermissions={
        Object {
          "bar": true,
          "baz": false,
          "foo": false,
        }
      }
      onChange={[Function]}
    />
    <ButtonToolbar>
      <Button
        bsStyle="danger"
        icon="trash"
        onClick={[Function]}
        pullRight={false}
        tipPlacement="top"
      >
        Remove
      </Button>
      <Button
        bsStyle="primary"
        disabled={true}
        icon="save"
        onClick={[Function]}
        pullRight={false}
        tipPlacement="top"
      >
        Update
      </Button>
    </ButtonToolbar>
  </div>
</Box__SpacedBox>
`;
